static/renderer/styles/styles.css
/* ------ General ------ */
* {
  margin: 0;
  padding: 0;
}
html, body {
  height: 100%;
}
*:focus {
  outline: none;
}

body {
  /* Vars */
  --theme__text-color: #f1f1f1;
  --theme__background-color: #1b1b1c;
  /* Pimp */
  background-color: var(--theme__background-color);
  font-size: 12px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

:root {
  font-size: 1em;
  overflow: hidden;
  /* Pimp */
  color: #f1f1f1;
}


/* ------ Main Layout ------ */
.root {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.main {
  flex: 1;
  /* Pimp */
  background-color: var(--theme__background-color);
}


/* ------ TitleBar ------ */
.title-bar {
  width: 100%;
  height: 18px;
  -webkit-app-region: drag; /* Dragging this moves the window */
  -webkit-user-select: none; /* Disable text selection */
  /* Pimp */
  background-color: #141417;
}
/* Title */
.title-bar__title {
  display: inline;
  padding-left: 2px;
  font-size: 16px;
}
/* Button Bar */
.title-bar__button-bar {
  height: 100%;
  display: block;
  float: right;
}
/* Button Bar Buttons */
.title-bar__button-bar__min,
.title-bar__button-bar__max,
.title-bar__button-bar__cross {
  height: 100%;
  width: 28px;
  float: left;
  -webkit-app-region: no-drag;
  /* Pimp */
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.3;
}
.title-bar__button-bar__min:hover,
.title-bar__button-bar__max:hover,
.title-bar__button-bar__cross:hover {
  opacity: 1;
}
/* Minimize Button */
.title-bar__button-bar__min {
  background-image: url('../images/min.png');
}
.title-bar__button-bar__min:hover {
  background-color: #242428;
}
/* Maximize Button */
.title-bar__button-bar__max {
  background-image: url('../images/max.png');
}
.title-bar__button-bar__max:hover {
  background-color: #242428;
}
/* Cross Button */
.title-bar__button-bar__cross {
  background-image: url('../images/cross.png');
}
.title-bar__button-bar__cross:hover {
  background-color: #eb4b4b;
}


/* ------ Header ------ */
.header {
  padding-bottom: 1em;
  /* Pimp */
  background-color: #2d2d30;
}
.header__title {
  padding: 0.2em 0 0.2em 0.3em;
}
.header__menu {
  display: inline-block;
  margin-right: 1em;
  margin-bottom: 1em;
}
.header__menu__item {
  display: inline-block;
}
.header__menu__item__link {
  padding: 0.4em 0.7em;
  border: 1px solid rgba(0,0,0,0);
  /* Pimp */
  cursor: pointer;
  text-decoration: none;
  color: var(--theme__text-color);
}
.header__menu__item__link:hover {
  /* Pimp */
  background-color: #3c2d4b;
  border-color: #d33682;
}
/* Header Search */
.header__search {
  width: 25em;
  padding: 0.25em;
  /* Pimp */
  border: 1px solid #47474d;
  background-color: var(--theme__background-color);
}
.header__search__input, .header__search__input:active {
  /* Pimp */
  color: var(--theme__text-color);
  background: none;
  border: none;
  outline: none;
}
.header__search__tag {
  /* Pimp */
  border: 1px solid #888;
  background-color: #aaa;
}
.header__search__tag__text,
.header__search__tag__text:active {
  /* Pimp */
}
.header__search__tag__remove {
  /* Pimp */
  /*
  border: 0.1em solid #800;
  border-radius: 999em;
  background-color: #a00;
  font-size: 0.75rem;
  */
}
.header__search__tag__remove:hover {
  /* Pimp */
  cursor: pointer;
}
.header__search__tag__remove__inner {
  /* Pimp */
  color: #c00;
  font-family: monospace, monospace;
}


/* ------ Footer ------ */
.footer {
  /* Pimp */
  background-color: #2a2a2b;
}


/* ------ Browse ------ */
.game-browser {
  width: 100%;
  height: 100%;
}

/* GameList */
.game-list {
  background-color: var(--theme__background-color);
}
/* GameList Item */
.game-list__item {
  display: flex;
  height: 50px;
  /* Pimp */
  list-style: none;
  background-color: var(--theme__background-color);
  color: #aaa;
}
.game-list__item--even {
  /* Pimp */
  background-color: #1e1e1f
}
/* GameList Item Thumb */
.game-list__item__thumb__border,
.game-list__item__thumb__wrapper,
.game-list__item__thumb__image {
	width: 50px;
	height: 50px;
}
.game-list__item__thumb__border {
	overflow: hidden;
}
.game-list__item__thumb__image {
	background-repeat: no-repeat;
	background-size: contain;
}
.game-list__item__thumb__wrapper {
}
/* GameList Item Title */
.game-list__item__right {
  flex: 1;
  overflow: hidden;
  padding: 5px;
}
.game-list__item__right__title {
  font-size: 1.2rem;
  white-space: nowrap;
  /* Pimp */
  text-overflow: ellipsis;
  overflow: hidden;
}
.list__item__right__genre {
  font-size: 0.8rem;
}


/* ------ Search & SearchTag Components ------ */
.search {
  display: inline-flex;
  white-space: nowrap;
  padding: 0.25em;
}
.search__input, .search__input:active {
  flex: 1;
  vertical-align: middle;
  /* Pimp */
  color: var(--theme__text-color);
  background: none;
  border: none;
  outline: none;
}
.search__tag {
  display: inline-block;
  white-space: nowrap;
  text-align: center;
  vertical-align: middle;
  flex: 0 1 auto;
  margin-right: 0.5rem;
  padding: 0.15rem 0.25rem;
}
.search__tag__text,
.search__tag__text:active {
  display: inline-block;
  white-space: nowrap;
}
.search__tag__remove {
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  width: 0.5rem;
  height: 0.5rem;
  margin-left: 0.25rem;
}
.search__tag__remove__inner {
  display: inline-block;
  vertical-align: middle;
  margin-top: -0.9rem;
}

